fix noti endpoints and add isRead to notifications